--- a/index.html
+++ b/index.html
@@ -261,13 +261,12 @@
                 <div class="aspect-w-3 aspect-h-2">
                     <img alt="Image post 2"
                          class="h-full w-full object-cover object-center" loading="lazy"
-                         src="/demo/astro-boilerplate/assets/images/image-post2.jpeg"/>
+                         src="assets/img/Fac_Montpellier.svg"/>
                 </div>
                 <div class="px-3 pt-4 pb-6 text-center">
-                    <h2 class="text-xl font-semibold">5th Lorem ipsum dolor sit</h2>
+                    <h2 class="text-xl font-semibold">DAEU B</h2>
                     <div class="mt-1 text-xs text-gray-400">Feb 5, 2020</div>
-                    <div class="mt-2 text-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur vero esse
-                        non molestias eos excepturi.
+                    <div class="mt-2 text-sm">Le DAEU B m'a permis d'obtenir le niveau Bac S en l'espace d'un an et de passer un équivalent diplômant.
                     </div>
                 </div>
             </div>
@@ -277,7 +276,7 @@
                 <div class="aspect-w-3 aspect-h-2">
                     <img alt="Image post 3"
                          class="h-full w-full object-cover object-center" loading="lazy"
-                         src="/demo/astro-boilerplate/assets/images/image-post3.jpeg"/>
+                         src="assets/img/epsi_logo.png"/>
                 </div>
                 <div class="px-3 pt-4 pb-6 text-center">
                     <h2 class="text-xl font-semibold">4th Lorem ipsum dolor sit</h2>
