Ajouts de l'onglet parcours
Changement des liens dans l'accueil et dans parcours

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
         <nav>
             <ul class="flex gap-x-3 font-medium text-gray-200">
                 <li class="hover:text-white">
-                    <a href="watch.html">Veille technologique</a>
+                    <a href="veille.html">Veille technologique</a>
                 </li>
                 <li class="hover:text-white">
-                    <a href="https://github.com/LouisGardet">GitHub</a>
+                    <a href="https://github.com/LouisGardet" target="_blank">GitHub</a>
                 </li>
                 <li class="hover:text-white">
-                    <a href="https://www.linkedin.com/in/louis-gardet/">Linkedin</a>
+                    <a href="https://www.linkedin.com/in/louis-gardet/" target="_blank">Linkedin</a>
                 </li>
             </ul>
         </nav>
@@ -236,7 +236,7 @@
                 <span class="bg-gradient-to-br from-sky-500 to-cyan-400 bg-clip-text text-transparent">Parcours</span>
             </div>
             <div class="text-sm">
-                <a href="/demo/astro-boilerplate/posts">Voir plus →</a>
+                <a href="/parcours.html" target="_blank">Voir plus →</a>
             </div>
         </div>
     </div>
@@ -294,9 +294,7 @@
     <div class="border-t border-gray-600 pt-5">
         <div class="text-sm text-gray-200">
             © Copyright <!-- -->
-            2022-2024<!-- -->
-            by <!-- -->
-            Astro boilerplate<!-- -->
+            2022-2024
             . Built with ♥ by Louis Gardet<!-- --> .
         </div>
     </div>
