--- a/veille.html
+++ b/veille.html
@@ -17,19 +17,19 @@
                     <rect x="15" y="4" width="6" height="16" rx="1"></rect>
                     <path d="M4 20h14"></path>
                 </svg>
-                Ixartz&#x27;s Blog
+                Louis Gardet
             </div>
         </a>
         <nav>
             <ul class="flex gap-x-3 font-medium text-gray-200">
                 <li class="hover:text-white">
-                    <a href="/demo/astro-boilerplate/posts">Blogs</a>
+                    <a href="index.html">Accueil</a>
                 </li>
                 <li class="hover:text-white">
-                    <a href="/demo/astro-boilerplate">GitHub</a>
+                    <a href="https://github.com/LouisGardet" target="_blank">GitHub</a>
                 </li>
                 <li class="hover:text-white">
-                    <a href="/demo/astro-boilerplate">Twitter</a>
+                    <a href="https://www.linkedin.com/in/louis-gardet/" target="_blank">Linkedin</a>
                 </li>
             </ul>
         </nav>
@@ -146,12 +146,8 @@
     <div class="border-t border-gray-600 pt-5">
         <div class="text-sm text-gray-200">
             © Copyright <!-- -->
-            2022<!-- -->
-            by <!-- -->
-            Astro boilerplate<!-- -->
-            . Built with ♥ by<!-- -->
-            <a class="text-cyan-400 hover:underline" href="https://creativedesignsguru.com" target="_blank" rel="noopener noreferrer">CreativeDesignsGuru</a>
-            .
+            2022-2024<!-- -->
+            . Built with ♥ by Louis Gardet<!-- -->
         </div>
     </div>
 </div>
