--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <meta content="Portfolio de Louis Gardet, étudiant en BTS SIO à l'EPSI, passionné par la robotique et l'IA."
           name="description">
-    <title>Portfolio BTS SIO</title>
+    <title>Portfolio BTS SIO de Louis Gardet, étudiant à l'EPSI 2022-2024</title>
     <style>
         html,
         body {
@@ -17,29 +17,27 @@
 <body class="bg-slate-900 text-gray-100">
 <div class="mx-auto max-w-screen-lg px-3 py-6">
     <div class="flex flex-col gap-y-3 sm:flex-row sm:items-center sm:justify-between">
-        <a href="/demo/astro-boilerplate">
             <div class="flex items-center bg-gradient-to-br from-sky-500 to-cyan-400 bg-clip-text text-xl font-bold text-transparent">
-                <svg class="mr-1 h-10 w-10 stroke-cyan-600" fill="none" stroke-linecap="round"
-                     stroke-linejoin="round" stroke-width="1.5" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M0 0h24v24H0z" stroke="none"></path>
-                    <rect height="8" rx="1" width="6" x="3" y="12"></rect>
-                    <rect height="12" rx="1" width="6" x="9" y="8"></rect>
-                    <rect height="16" rx="1" width="6" x="15" y="4"></rect>
-                    <path d="M4 20h14"></path>
-                </svg>
+                <img src="./assets/img/logo_portfolio.webp" alt="Logo" class="mr-1 h-10 w-10">
                 Louis Gardet
             </div>
-        </a>
         <nav>
             <ul class="flex gap-x-3 font-medium text-gray-200">
+               
                 <li class="hover:text-white">
-                    <a href="veille.html">Veille technologique</a>
+                    <a href="index.html">Accueil</a>
+                </li>
+                <li class="parcours">
+                    <a href="parcours.html">Parcours</a>
                 </li>
                 <li class="hover:text-white">
                     <a href="https://github.com/LouisGardet" target="_blank">GitHub</a>
                 </li>
                 <li class="hover:text-white">
                     <a href="https://www.linkedin.com/in/louis-gardet/" target="_blank">Linkedin</a>
+                </li>
+                <li class="hover:text-white">
+                    <a href="veille.html">Veille technologique</a>
                 </li>
             </ul>
         </nav>
