Réorganisation de la navbar
Redondance des liens
Dois-je retirer les liens github et linkedin ?

--- a/index.html
+++ b/index.html
@@ -27,8 +27,20 @@
                 <li class="hover:text-white">
                     <a href="index.html">Accueil</a>
                 </li>
+                <li class="bts_sio">
+                    <a href="bts.html">BTS SIO </a>
+                </li>
                 <li class="parcours">
                     <a href="parcours.html">Parcours</a>
+                </li>
+                <li class="tableauE4">
+                    <a href="" class="tableauSynthese">Tableau Synthèse</a>
+                </li>
+                <li class="situations">
+                    <a href="" class="situationE5">Les Situations</a>
+                </li>
+                <li class="hover:text-white">
+                    <a href="veille.html">Veille technologique</a>
                 </li>
                 <li class="hover:text-white">
                     <a href="https://github.com/LouisGardet" target="_blank">GitHub</a>
@@ -36,9 +48,7 @@
                 <li class="hover:text-white">
                     <a href="https://www.linkedin.com/in/louis-gardet/" target="_blank">Linkedin</a>
                 </li>
-                <li class="hover:text-white">
-                    <a href="veille.html">Veille technologique</a>
-                </li>
+
             </ul>
         </nav>
     </div>
