Ajout de contenu
Page sur le bts sio
Ajouts de balises ARIA pour l'accessibilité
Optimisation des balises ALT
Target _blank sur quelques liens internes/externes

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <meta content="Portfolio de Louis Gardet, étudiant en BTS SIO à l'EPSI, passionné par la robotique et l'IA."
           name="description">
-    <title>Portfolio BTS SIO de Louis Gardet, étudiant à l'EPSI 2022-2024</title>
-    <style>
+    <title>Portfolio de Louis Gardet - Étudiant BTS SIO à l'EPSI - Passionné de Robotique et IA</title>   
+     <style>
         html,
         body {
             scroll-behavior: smooth;
@@ -25,28 +25,28 @@
             <ul class="flex gap-x-3 font-medium text-gray-200">
                
                 <li class="hover:text-white">
-                    <a href="index.html">Accueil</a>
+                    <a href="index.html" aria-label="Accueil">Accueil</a>
                 </li>
                 <li class="bts_sio">
-                    <a href="bts.html">BTS SIO </a>
+                    <a href="bts.html" aria-label="Onglet BTS SIO" target="_blank">BTS SIO </a>
                 </li>
                 <li class="parcours">
-                    <a href="parcours.html">Parcours</a>
+                    <a href="parcours.html" aria-label="Onglet Parcours professionnel" target="_blank">Parcours</a>
                 </li>
                 <li class="tableauE4">
-                    <a href="" class="tableauSynthese">Tableau Synthèse</a>
+                    <a href="" class="tableauSynthese" aria-label="Onglet du tableau de synthèse des compétences liées au BTS" target="_blank">Tableau Synthèse</a>
                 </li>
                 <li class="situations">
-                    <a href="" class="situationE5">Les Situations</a>
+                    <a href="" class="situationE5" aria-label="Onglet des situations en entreprise" target="_blank">Les Situations</a>
                 </li>
                 <li class="hover:text-white">
-                    <a href="veille.html">Veille technologique</a>
+                    <a href="veille.html" aria-label="Onglet sur la veille technologique" target="_blank">Veille technologique</a>
                 </li>
                 <li class="hover:text-white">
-                    <a href="https://github.com/LouisGardet" target="_blank">GitHub</a>
+                    <a href="https://github.com/LouisGardet" aria-label="Lien vers mon GitHub" target="_blank">GitHub</a>
                 </li>
                 <li class="hover:text-white">
-                    <a href="https://www.linkedin.com/in/louis-gardet/" target="_blank">Linkedin</a>
+                    <a href="https://www.linkedin.com/in/louis-gardet/" aria-label="Lien vers mon profil Linkedin" target="_blank">Linkedin</a>
                 </li>
 
             </ul>
@@ -54,8 +54,11 @@
     </div>
 </div>
 <!-- Présentation de mon profil -->
+
+
+
 <div class="mx-auto max-w-screen-lg px-3 py-6">
-    <div class="flex flex-col items-center md:flex-row md:justify-between md:gap-x-24">
+    <header class="flex flex-col items-center md:flex-row md:justify-between md:gap-x-24">
         <div>
             <h1 class="text-3xl font-bold">
                 Bonjour, je m'appelle
@@ -108,8 +111,14 @@
         <div class="shrink-0">
             <img alt="Avatar image" class="h-80 w-64" loading="lazy" src="assets/img/LouisGardet'sPic.png"/>
         </div>
-    </div>
+    </header>
 </div>
+
+<!-- Présentation du BTS et des options -->
+
+
+
+
 <!-- MES PROJETS -->
 <div class="mx-auto max-w-screen-lg px-3 py-6">
     <div class="mb-6 text-2xl font-bold">
